fix: icon size and content spacing, update docs

--- a/packages/components/src/components/collapsible/collapsible.css
+++ b/packages/components/src/components/collapsible/collapsible.css
@@ -27,11 +27,11 @@
     var(--telekom-color-functional-focus-standard);
 
   /* icon */
-  --spacing-top-icon: var(--telekom-spacing-unit-x1);
+  --icon-size: 24px;
 
   /* content */
   --spacing-right-content: var(--telekom-spacing-unit-x12);
-  --spacing-left-content: var(--telekom-spacing-unit-x8);
+  --spacing-left-content: var(--telekom-spacing-unit-x9);
   --spacing-top-content: var(--telekom-spacing-unit-x4);
   --spacing-bottom-content: var(--telekom-spacing-unit-x6);
 }
@@ -63,7 +63,7 @@
   width: 100%;
   display: flex;
   text-align: left;
-  align-items: flex-start;
+  align-items: center;
   padding-top: 0;
   border-color: transparent;
   border-style: solid;
@@ -104,7 +104,11 @@
 
 .collapsible__icon {
   flex-shrink: 0;
-  margin-top: var(--spacing-top-icon);
+}
+
+.collapsible__icon .scale-icon {
+  height: var(--icon-size);
+  width: var(--icon-size);
 }
 
 .collapsible__icon-right {
